# AI-Governance

./: .env.example  .gitignore  HACKATHON_GUIDE.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/dev-dist/: sw.js
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: ErrorBoundary.tsx  InstallPWA.tsx  ProtectedRoute.tsx  Skeletons.tsx
dashboard/src/contexts/: AuthContext.tsx  ThemeContext.tsx
dashboard/src/layouts/: AppLayout.tsx
dashboard/src/lib/: api.ts  govApi.ts  hooks.ts  mockData.ts
dashboard/src/pages/: DashboardPage.tsx  IncidentsPage.tsx  Login.tsx  LoginPage.tsx  PoliciesPage.tsx  ReportsPage.tsx  SettingsPage.tsx  ShadowAIPage.tsx
detection/: Dockerfile  __init__.py
detection/app/: __init__.py  ai_domains.yaml  llama_classifier.py  main.py  ml_classifier.py  ner_detector.py  regex_detector.py  risk_scorer.py  shadow_ai.py
detection/ml/: .gitignore  run_pipeline.sh
governance/: Dockerfile  package-lock.json  package.json  tsconfig.json
governance/prisma/: schema.prisma  seed.js  seed.js.map  seed.ts
governance/src/: index.ts
proxy/: Dockerfile  __init__.py
proxy/app/: __init__.py  adapters.py  audit.py  audit_consumer.py  auth.py  config.py  database.py  db_models.py  logging_config.py  main.py  models.py  policy_engine.py  routes.py  security.py
scripts/: fix_conflicts.py  init-db.sql
tests/: load_test.py  test_integration.py
(+46 files in other folders)
